💂📟 Checkpoint ./views/home.html:44341290/7

--- a/views/home.html
+++ b/views/home.html
@@ -242,9 +242,9 @@
           alert("Modifica effettuata!");
           return response.json();
         }
-        alert('ERROR '+ response.status +'! '+ response.json();
+        alert('ERROR '+ response.status +'! '+ response.json());
         //invio al client la risposta sotto formato json
-        response.json();
+        //response.json();
       })
       .catch(e => {
           console.log("errore"+e);
