📟🏉 Checkpoint ./views/home.html:44341290/41

--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style> @import url('https://progetto-piattaforme-territorio.glitch.me/public/home.css'); </style>
+    <style src="https://progetto-piattaforme-territorio.glitch.me/public/home.css"></style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
