--- a/public/home.css
+++ b/public/home.css
@@ -4,5 +4,5 @@ body,html {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: #DBF9FC;
+  background-color: #F9ECE9;
 }
