--- a/public/index.css
+++ b/public/index.css
@@ -1,8 +1,8 @@
-body,html {
+body,
+html {
   height: 100%;
-  font-family: 'Hepta Slab', serif;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  background-color: #F9ECE9;
+  background-color: #f9ece9;
 }
