--- a/views/home.html
+++ b/views/home.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style rel="stylesheet" src="https://progetto-piattaforme-territorio.glitch.me/public/home.css"></style>
+    <style rel="stylesheet" src="https://progetto-piattaforme-territorio.glitch.me/app/public/index.css"></style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;500&display=swap" rel="stylesheet">
-    <style> @import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;500&display=swap'); </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>     
   </head>
 
   <body>
