--- a/views/home.html
+++ b/views/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <style src="https://progetto-piattaforme-territorio.glitch.me/public/home.css"></style>
+    <link rel="stylesheet" type="text/css" href="/css/home.css" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
