--- a/views/home.html
+++ b/views/home.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/home.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;500&display=swap" rel="stylesheet">
     <style> @import url('https://fonts.googleapis.com/css2?family=Hepta+Slab:wght@400;500&display=swap'); </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>     
@@ -19,7 +20,7 @@
     <div>
       <label for= "search"> Cerca Tutor</label><br>
       <input type = "text" id = "researchValue" placeholder = "Cerca">
-      <button type="button" id="btn1" onclick="researchTutors()"> Cerca</button>
+      <button type="button" id="btnResearch" onclick="researchTutors()"> Cerca</button>
     </div>
     <br>
     
