⛑🎂 Checkpoint ./views/home.html:44341290/370 ./public/home.css:44341290/1

--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
     <div>
       <label for= "search"> Cerca Tutor</label><br>
       <input type = "text" id = "researchValue" placeholder = "Cerca">
-      <button type="button" id="btnResearch" onclick="researchTutors()"> Cerca</button>
+      <button type="button" id="btnResearch" onclick="researchTutors()"> <i class="material-icons">person_search</i></button>
     </div>
     <br>
     
