--- a/public/home.css
+++ b/public/home.css
@@ -3,3 +3,20 @@ body,html {
   font-family: 'Hepta Slab', serif;
   background-color: #F9ECE9;
 }
+
+.searchBar{
+  background-color: white;
+  padding: 3px 10px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.btnSearch{
+  background-color: white;
+  padding: 1px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 5px;
+}
