--- a/views/home.html
+++ b/views/home.html
@@ -19,8 +19,8 @@
     
     <div>
       <label for= "search"> Cerca Tutor</label><br>
-      <input type = "text" id = "researchValue" placeholder = "Cerca">
-      <button type="button" id="btnResearch" onclick="researchTutors()"> <i class="material-icons">person_search</i></button>
+      <input class = "searchBar" type = "text" id = "researchValue" placeholder = "Cerca">
+      <button class = "btnSearch" type="button" id="btnSearch" onclick="searchTutors()"> <i class="material-icons">person_search</i></button>
     </div>
     <br>
     
@@ -107,10 +107,10 @@
     sessionStorage.setItem("action","");
 
     //FUNZIONE PER RICERCARE UN TUTOR
-    async function researchTutors(){
-      const researchValue = document.getElementById("researchValue").value;
+    async function searchTutors(){
+      const searchValue = document.getElementById("searchValue").value;
       
-      if(!researchValue){
+      if(!searchValue){
         alert("Inserire uno tutor.");
         return;
       }
@@ -124,7 +124,7 @@
       };
       
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/researchTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutor', options)
       .then((response) => {
         if (response.ok) {
           alert("Nuovo tutor aggiunto!");
