Rewound to commit 92cba0da0a17fc809d21b6b8c7f14f23c1d82e1e + 0 edits

--- a/views/researchTable.html
+++ b/views/researchTable.html
@@ -28,18 +28,15 @@
   </table>
 
   <script>
-    var myArray = []
+    var myArray = [
+        {'nome':'Sara', 'cognome':'Yosef', 'email':'yosef@gmail.com'},
+        {'nome':'Margherita', 'cognome':'Moretti', 'email':'marghe.moretti@icloud.it'},
+        {'nome':'Eugenio', 'cognome':'Fusero', 'email':'eugenio.fusero@gmail.com'},
+        {'nome':'Riccardo', 'cognome':'Camilletti', 'email':'riccardo.camilletti@gmail.com'},
+        {'nome':'Camilla', 'cognome':'Antognini', 'email':'anto_cami@icloud.it'},
+    ]
 
     buildTable(myArray)
-    
-    $.ajax({
-      method:'GET',
-      url:"https://progetto-piattaforme-territorio.glitch.me/printAll",
-      success: function(responce){
-        myArray = responce;
-        console.log(myArray)
-      }
-    })
 
 
 
