--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -15,27 +15,31 @@
               }
   </style>
   
-  <div>
-    <div>
+  <body>
+    <form action="" id="searchTutor">
       <div>
-        <!label for= "search" Cerca Tutor<!/label><br>
-        <input class = "" type = "text" id = "researchValue" placeholder = "Cerca">
-        <button class = "btnSearch" type="button" id="btnSearch" onclick="searchTutors()"> <i class="material-icons">person_search</i></button>
-      </div>  
-    </div>
-  </div>
+        <div>
+          <div>
+            <!label for= "search" Cerca Tutor<!/label><br>
+            <input class = "" type = "text" id = "searchValue" placeholder = "Cerca">
+            <button class = "btnSearch" type="button" id="btnSearch" onclick="searchTutors()"> <i class="material-icons">person_search</i></button>
+          </div>  
+        </div>
+      </div>
 
-  <table class="table table-striped">
-      <tr  class="bg-info">
-          <th>Nome</th>
-          <th>Cognome</th>
-          <th>Email</th>
-      </tr>
+      <table class="table table-striped">
+          <tr  class="bg-info">
+              <th>Nome</th>
+              <th>Cognome</th>
+              <th>Email</th>
+          </tr>
 
-      <tbody id="myTable">
+          <tbody id="myTable">
 
-      </tbody>
-  </table>
+          </tbody>
+      </table>
+    </form>
+  </body>
 
   <script>
     
@@ -57,19 +61,19 @@
       };
       
       //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutor', options)
+      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutor'+ searchValue, options)
       .then((response) => {
         if (response.ok) {
           alert("Nuovo tutor aggiunto!");
           return response.json();
         }
-        alert('ERROR!Something went wrong!');
+        alert('ERROR '+ response.status +'!Something went wrong!');
       })
       .catch(e => {
           console.log(e);
       });
       //pulisce la form
-      document.getElementById("addTutor").reset();
+      document.getElementById("searchTutor").reset();
     }
     
     var myArray = []
