--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -22,7 +22,7 @@
           <div>
             <!label for= "search" Cerca Tutor<!/label><br>
             <input class = "" type = "text" id = "searchValue" placeholder = "Cerca">
-            <button class = "btnSearch" type="button" id="btnSearch" onclick="searchTutors()"> <i class="material-icons">person_search</i></button><br>
+            <button class = "btnSearch" type="button" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
             <input type="button" onclick="setFilter(0);" value="filtroNome" />
             <input type="button" onclick="setFilter(3);" value="filtroCognome" />
             <input type="button" onclick="setFilter(1);" value="filtroUni" />
@@ -48,8 +48,7 @@
   <script>
     var myArray = []
     
-    //FUNZIONE PER RICERCARE UN TUTOR
-    async function searchTutors(){
+    $('btnSearch').on('click', function () {
       const searchValue = document.getElementById("searchValue").value;
       console.log(searchValue);
       console.log(localStorage.filtro);
@@ -59,42 +58,16 @@
         return;
       }
       
-      //opzioni per la fetch
-      const options = {
-        method: 'GET',
-        headers: {
-        'Content-Type': 'application/json',
-        }
-      };
-      
-      //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutors/'+ localStorage.filtro+"/"+ searchValue, options)
-      .then((response) => {
-        if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
-          myArray = response.json();
+      $.ajax({
+        method:'GET',
+        url:'https://progetto-piattaforme-territorio.glitch.me/home/searchTutors/'+ localStorage.filtro+'/'+ searchValue,
+        success: function(responce){
+          myArray = responce;
           buildTable(myArray);
-          return response.json();
+          console.log(myArray)
         }
-        alert('ERROR '+ response.status +'!Something went wrong!');
       })
-      .catch(e => {
-          console.log(e);
-      });
-      //pulisce la form
-      document.getElementById("searchTutor").reset();
-    }
-    
-    
-    $.ajax({
-      method:'GET',
-      url:"https://progetto-piattaforme-territorio.glitch.me/printAll",
-      success: function(responce){
-        myArray = responce;
-        buildTable(myArray);
-        console.log(myArray)
-      }
-    })
+   })
 
     function setFilter(value){
       localStorage.setItem("filtro", value);
