--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -22,11 +22,11 @@
           <div>
             <!label for= "search" Cerca Tutor<!/label><br>
             <input class = "" type = "text" id = "searchValue" placeholder = "Cerca">
-            <button class = "btnSearch" type="button" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
-            <input type="button" onclick="setFilter(0);" value="filtroNome" />
-            <input type="button" onclick="setFilter(3);" value="filtroCognome" />
-            <input type="button" onclick="setFilter(1);" value="filtroUni" />
-            <input type="button" onclick="setFilter(2);" value="filtroCorso" />
+            <button class = "btnSearch" type="button" onclick="setApiParams()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
+            <input type="button" onclick="setFilter(0)" value="filtroNome" />
+            <input type="button" onclick="setFilter(3)" value="filtroCognome" />
+            <input type="button" onclick="setFilter(1)" value="filtroUni" />
+            <input type="button" onclick="setFilter(2)" value="filtroCorso" />
           </div>  
         </div>
       </div>
@@ -47,20 +47,31 @@
 
   <script>
     var myArray = []
-    localStorage.setItem(defaultURL)
+    //valori di default nel momento del caricamento della pagina
+    localStorage.setItem("defaultURL", "printAll/");
+    localStorage.setItem("defaultFilter", 0);
+    localStorage.setItem("defaultSearchValue", " ");
+    
+    sessionStorage.setItem("url", localStorage.defaultURL);
+    sessionStorage.setItem("filter", localStorage.defaultFilter);
+    sessionStorage.setItem("searchValue", " ");
+    
     
     $.ajax({
       method:'GET',
-      url:'https://progetto-piattaforme-territorio.glitch.me/printAll/',
+      url:'https://progetto-piattaforme-territorio.glitch.me/'+ sessionStorage.url,
       success: function(responce){
         myArray = responce;
         buildTable(myArray);
         console.log(myArray)
       }
     })
+    
+    function setFilter()
 
-    function setFilter(value){
-      localStorage.setItem("filtro", value);
+    function setApiParams(value){
+      sessionStorage.setItem("url", "home/searchTutors");
+      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
     }
 
 
