🏚🛣 Checkpoint ./views/dataTable.html:44341290/510

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -48,7 +48,7 @@
   <script>
     var myArray = []
     //valori di default nel momento del caricamento della pagina
-    localStorage.setItem("defaultURL", "printAll/");
+    localStorage.setItem("defaultURL", "printAll");
     localStorage.setItem("defaultFilter", 0);
     localStorage.setItem("defaultSearchValue", " ");
     
@@ -59,7 +59,7 @@
     
     $.ajax({
       method:'GET',
-      url:'https://progetto-piattaforme-territorio.glitch.me/'+ sessionStorage.url,
+      url:'https://progetto-piattaforme-territorio.glitch.me/'+ sessionStorage.url ,
       success: function(responce){
         myArray = responce;
         buildTable(myArray);
@@ -67,11 +67,13 @@
       }
     })
     
-    function setFilter()
+    function setFilter(value){
+      sessionStorage.setItem("filter", value);
+    }
 
-    function setApiParams(value){
-      sessionStorage.setItem("url", "home/searchTutors");
+    function setApiParams(){
       sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
+      sessionStorage.setItem("url", "home/searchTutors/"+sessionStorage.filter+'/'+sessionStorage.searchValue);
     }
 
 
