--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -54,42 +54,16 @@
     sessionStorage.setItem("filter", localStorage.defaultFilter);
     sessionStorage.setItem("searchValue", "none ");
     
-    //FUNZIONE PER RICERCARE UN TUTOR
-    async function searchTutors(){
-      const searchValue = document.getElementById("searchValue").value;
-      console.log(searchValue);
-      console.log(localStorage.filtro);
-      
-      if(!searchValue){
-        alert("Inserire uno tutor.");
-        return;
+    
+    $.ajax({
+      method:'GET',
+      url:'https://progetto-piattaforme-territorio.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ sessionStorage.searchValue ,
+      success: function(response){
+        myArray = response.json;
+        buildTable(myArray);
+        console.log(myArray)
       }
-      
-      //opzioni per la fetch
-      const options = {
-        method: 'GET',
-        headers: {
-        'Content-Type': 'application/json',
-        }
-      };
-      
-      //eseguo la fetch
-      fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutors/'+ localStorage.filtro+"/"+ searchValue, options)
-      .then((response) => {
-        if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
-          myArray = response.json();
-          buildTable(myArray);
-          return response.json();
-        }
-        alert('ERROR '+ response.status +'!Something went wrong!');
-      })
-      .catch(e => {
-          console.log(e);
-      });
-      //pulisce la form
-      document.getElementById("searchTutor").reset();
-    }
+    })
     
     function setFilter(value){
       sessionStorage.setItem("filter", value);
