--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -22,7 +22,7 @@
           <div>
             <!label for= "search" Cerca Tutor<!/label><br>
             <input class = "" type = "text" id = "searchValue" placeholder = "Cerca">
-            <button class = "btnSearch" type="button" onclick="searchValue()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
+            <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
             <input type="button" onclick="setFilter(0)" value="filtroNome" />
             <input type="button" onclick="setFilter(3)" value="filtroCognome" />
             <input type="button" onclick="setFilter(1)" value="filtroUni" />
@@ -67,7 +67,7 @@
     
     //FUNZIONE PER RICERCARE UN TUTOR
     async function searchTutors(){
-      const searchValue = document.getElementById("searchValue").value;
+      sessionStorage.setItem("searchValue", document.getElementById("searchValue").value);
       
       if(!searchValue){
         alert("Inserire uno tutor.");
@@ -86,10 +86,10 @@
       fetch('https://progetto-piattaforme-territorio.glitch.me/home/searchTutors/'+sessionStorage.filter+'/'+ sessionStorage.searchValue, options)
       .then((response) => {
         if (response.ok) {
-          alert("Nuovo tutor aggiunto!");
+          alert("La ricerca ha prodotto risultati!");
           myArray = response;
-        buildTable(myArray);
-        console.log(myArray)
+          buildTable(myArray);
+          console.log(myArray)
           return response.json();
         }
         alert('ERROR!Something went wrong!');
@@ -98,7 +98,7 @@
           console.log(e);
       });
       //pulisce la form
-      document.getElementById("addTutor").reset();
+      document.getElementById("searchTutor").reset();
     }
     
     function setFilter(value){
