👕👮 Checkpoint ./server.js:44341290/400 ./views/dataTable.html:44341290/11

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -59,7 +59,7 @@
       method:'GET',
       url:'https://progetto-piattaforme-territorio.glitch.me/printAll' ,
       success: function(response){
-        myArray = response;
+        myArray = response.json();
         buildTable(myArray);
         console.log(myArray)
       }
