--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -87,13 +87,13 @@
       .then((response) => {
         if (response.ok) {
           alert("La ricerca ha prodotto risultati!");
-          myArray = response.json();
-          buildTable(myArray);
-          console.log(myArray)
           return response.json();
         }
         alert('ERROR!Something went wrong!');
       })
+      .then(data =>{
+        
+      }
       .catch(e => {
           console.log(e);
       });
