🍁🍅 Checkpoint ./views/dataTable.html:44341290/132

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -92,8 +92,10 @@
         alert('ERROR!Something went wrong!');
       })
       .then(data =>{
-        
-      }
+        myArray = data;
+        buildTable(myArray);
+        console.log(myArray)
+      })
       .catch(e => {
           console.log(e);
       });
