🗽🎷 Checkpoint ./views/dataTable.html:44341290/25

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -22,9 +22,9 @@
             <!label for= "search" Cerca Tutor<!/label><br>
             <input class = "" type = "text" id = "searchValue" placeholder = "Cerca">
             <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
-            <input type="button" onclick="setFilter(1)" value="filtroNome" />
-            <input type="button" onclick="setFilter(4)" value="filtroCognome" />
-            <input type="button" onclick="setFilter(2)" value="filtroUni" />
+            <input type="button" onclick="setFilter(1)" value="Nome" />
+            <input type="button" onclick="setFilter(4)" value="Cognome" />
+            <input type="button" onclick="setFilter(2)" value="Universitè" />
             <input type="button" onclick="setFilter(3)" value="filtroCorso" />
           </div>  
         </div>
