🔨🍎 Checkpoint ./views/dataTable.html:44341290/7

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -24,8 +24,8 @@
             <button class = "btnSearch" type="button" onclick="searchTutors()" id="btnSearch"> <i class="material-icons">person_search</i></button><br>
             <input type="button" onclick="setFilter(1)" value="Nome" />
             <input type="button" onclick="setFilter(4)" value="Cognome" />
-            <input type="button" onclick="setFilter(2)" value="Universitè" />
-            <input type="button" onclick="setFilter(3)" value="filtroCorso" />
+            <input type="button" onclick="setFilter(2)" value="Università" />
+            <input type="button" onclick="setFilter(3)" value="Corso" />
           </div>  
         </div>
       </div>
