--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/table.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
 
@@ -30,7 +31,7 @@
         </div>
       </div>
 
-      <table id = "tableThead">
+      <table id = "tableThread">
           <tr>
               <th>Nome</th>
               <th>Cognome</th>
