--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -31,7 +31,7 @@
         </div>
       </div>
 
-      <table id = "tableThread">
+      <table id = "tableThead">
           <tr>
               <th>Nome</th>
               <th>Cognome</th>
