🍠🏏 Checkpoint ./views/dataTable.html:44341290/97 ./public/table.css:44341290/15

--- a/public/table.css
+++ b/public/table.css
@@ -13,7 +13,7 @@ body{
 	border-collapse: collapse;
 }
 
-.table td,.table th{
+.tableThead td,.table th{
   padding:12px 15px;
   border:1px solid #dddddd;
   text-align: center;
