--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -8,12 +8,6 @@
     <link rel="stylesheet" type="text/css" href="/table.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
-
-  <style>
-      th{ 
-          color:#fff;
-              }
-  </style>
   
   <body>
     <form action="" id="searchTutor">
@@ -31,7 +25,7 @@
         </div>
       </div>
 
-      <table id = "tableThead">
+      <table class = "table" id = "tableThead">
           <tr>
               <th>Nome</th>
               <th>Cognome</th>
