--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/table.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
   
   <body>
@@ -30,6 +31,7 @@
               <th>Nome</th>
               <th>Cognome</th>
               <th>Email</th>
+              <th>Visualizza</th>
           </tr>
 
           <tbody id="myTable">
@@ -113,7 +115,7 @@
                 <td>${data[i].name}</td>
                 <td>${data[i].surname}</td>
                 <td>${data[i].email}</td>
-                <td><button>Visualizza</td>
+                <td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row
 
