⏱🐵 Checkpoint ./public/table.css:44341290/147 ./views/dataTable.html:44341290/324

--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -39,6 +39,21 @@
           </tbody>
       </table>
     </form>
+      <table id = "fullData">
+          <tr>
+              <th>Nome</th>
+              <th>Cognome</th>
+              <th>Email</th>
+              <th>Visualizza</th>
+          </tr>
+
+          <tbody id="myTable">
+
+          </tbody>
+    <form>
+      
+    </form>
+    
   </body>
 
   <script>
