--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -39,19 +39,20 @@
           </tbody>
       </table>
     </form>
+    
+    <form>
       <table id = "fullData">
           <tr>
-              <th>Nome</th>
-              <th>Cognome</th>
-              <th>Email</th>
-              <th>Visualizza</th>
+              <th>Nome</th><br>
+              <th>Cognome</th><br>
+              <th>Email</th><br>
+              <th>Visualizza</th><br>
           </tr>
 
-          <tbody id="myTable">
+          <tbody id="bodyData">
 
           </tbody>
-    <form>
-      
+      </table>
     </form>
     
   </body>
@@ -127,6 +128,40 @@
 
       for (var i = 0; i < data.length; i++){
         var row = `<tr>
+                <td>${data[i].name}</td>
+                <td>${data[i].surname}</td>
+                <td>${data[i].email}</td>
+                <td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+              </tr>`
+        table.innerHTML += row
+
+
+      }
+    }
+    
+    function buildFullTable(data){
+      var table = document.getElementById('fullTable')
+      $("#myTable").empty();
+
+      for (var i = 0; i < data.length; i++){
+        var row = `<tr>
+                function buildTable(data){
+      var table = document.getElementById('myTable')
+      $("#myTable").empty();
+
+      for (var i = 0; i < data.length; i++){
+        var row = `<tr>
+                <td>${data[i].name}</td>
+                <td>${data[i].surname}</td>
+                <td>${data[i].email}</td>
+                <td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+              </tr>`
+        table.innerHTML += row
+
+
+      }
+    }
+                
                 <td>${data[i].name}</td>
                 <td>${data[i].surname}</td>
                 <td>${data[i].email}</td>
