--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -42,15 +42,13 @@
     
     <form>
       <table id = "fullData">
-          <tr>
-              <th>Nome</th><br>
-              <th>Cognome</th><br>
-              <th>Email</th><br>
-              <th>Visualizza</th><br>
-          </tr>
-
           <tbody id="bodyData">
-
+            <tr>
+              <tr>Nome</tr><br>
+              <tr>Cognome</tr><br>
+              <tr>Email</tr><br>
+              <tr>Visualizza</tr><br>
+          </tr>
           </tbody>
       </table>
     </form>
@@ -134,42 +132,20 @@
                 <td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row
-
-
       }
     }
     
     function buildFullTable(data){
-      var table = document.getElementById('fullTable')
-      $("#myTable").empty();
+      var table = document.getElementById('fullData')
+      $("#fullData").empty();
 
       for (var i = 0; i < data.length; i++){
-        var row = `<tr>
-                function buildTable(data){
-      var table = document.getElementById('myTable')
-      $("#myTable").empty();
-
-      for (var i = 0; i < data.length; i++){
-        var row = `<tr>
-                <td>${data[i].name}</td>
-                <td>${data[i].surname}</td>
-                <td>${data[i].email}</td>
-                <td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+        var nameRow = `<tr>
+                <td>Nome</td><td>${data[i].name}</td>
+                <tr>Cognome</tr><td>${data[i].surname}</td>
+                <tr>Email</tr><td>${data[i].email}</td>
               </tr>`
         table.innerHTML += row
-
-
-      }
-    }
-                
-                <td>${data[i].name}</td>
-                <td>${data[i].surname}</td>
-                <td>${data[i].email}</td>
-                <td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
-              </tr>`
-        table.innerHTML += row
-
-
       }
     }
 
