--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -43,12 +43,7 @@
     <form>
       <table id = "fullData">
           <tbody id="bodyData">
-            <tr>
-              <tr>Nome</tr><br>
-              <tr>Cognome</tr><br>
-              <tr>Email</tr><br>
-              <tr>Visualizza</tr><br>
-          </tr>
+          
           </tbody>
       </table>
     </form>
@@ -129,25 +124,26 @@
                 <td>${data[i].name}</td>
                 <td>${data[i].surname}</td>
                 <td>${data[i].email}</td>
-                <td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button onclick="buildFullTable()" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row
       }
     }
     
     function buildFullTable(data){
-      var table = document.getElementById('fullData')
-      $("#fullData").empty();
+      var table = document.getElementById('bodyData')
+      $("#bodyData").empty();
 
-      for (var i = 0; i < data.length; i++){
-        var nameRow = `<tr>
-                <td>Nome</td><td>${data[i].name}</td>
-                <tr>Cognome</tr><td>${data[i].surname}</td>
-                <tr>Email</tr><td>${data[i].email}</td>
+      var fullData = `<tr>
+                <td>Nome</td><td>${data[i].name}</td><br>
+                <td>Cognome</td><td>${data[i].surname}</td><br>
+                <td>Email</td><td>${data[i].email}</td><br>
+                <td>Università</td><td>${data[i].universita}</td><br>
+                <td>Corso</td><td>${data[i].corso}</td><br>
+                <td>Esami</td><td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td><br>
               </tr>`
-        table.innerHTML += row
-      }
     }
+    table.innerHTML += fullData
 
   </script>
 </html>
