--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -42,6 +42,18 @@
     
     <form>
       <table id = "fullData">
+        <tr>
+    <th>Name:</th>
+    <td>Bill Gates</td>
+  </tr>
+  <tr>
+    <th>Telephone:</th>
+    <td>555 77 854</td>
+  </tr>
+  <tr>
+    <th>Telephone:</th>
+    <td>555 77 855</td>
+  </tr>
           <tbody id="bodyData">
           
           </tbody>
@@ -133,6 +145,8 @@
     function buildFullTable(data){
       var table = document.getElementById('bodyData')
       $("#bodyData").empty();
+      
+      console.log(data);
 
       var fullData = `<tr>
                 <td>Nome</td><td>${data[i].name}</td><br>
@@ -143,7 +157,7 @@
                 <td>Esami</td><td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td><br>
               </tr>`
     }
-    table.innerHTML += fullData
+    bodyData.innerHTML += fullData
 
   </script>
 </html>
