--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -43,20 +43,29 @@
     <form>
       <table id = "fullData">
         <tr>
-    <th>Name:</th>
-    <td>Bill Gates</td>
-  </tr>
-  <tr>
-    <th>Telephone:</th>
-    <td>555 77 854</td>
-  </tr>
-  <tr>
-    <th>Telephone:</th>
-    <td>555 77 855</td>
-  </tr>
-          <tbody id="bodyData">
-          
-          </tbody>
+          <th>Nome:</th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Cognome:</th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Email:</th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Università:</th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Corso:</th>
+          <td></td>
+        </tr>
+        <tr>
+          <th>Esami:</th>
+          <td></td>
+        </tr>
       </table>
     </form>
     
@@ -136,28 +145,44 @@
                 <td>${data[i].name}</td>
                 <td>${data[i].surname}</td>
                 <td>${data[i].email}</td>
-                <td><button onclick="buildFullTable()" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button onclick="buildFullTable(data[i])" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row
       }
     }
     
-    function buildFullTable(data){
-      var table = document.getElementById('bodyData')
-      $("#bodyData").empty();
+    function buildFullTable(tutor){
+      var table = document.getElementById('fullData')
+      $("#fullData").empty();
       
-      console.log(data);
+      console.log(tutor);
 
-      var fullData = `<tr>
-                <td>Nome</td><td>${data[i].name}</td><br>
-                <td>Cognome</td><td>${data[i].surname}</td><br>
-                <td>Email</td><td>${data[i].email}</td><br>
-                <td>Università</td><td>${data[i].universita}</td><br>
-                <td>Corso</td><td>${data[i].corso}</td><br>
-                <td>Esami</td><td><button <i class="material-symbols-outlined"> keyboard_double_arrow_right</td><br>
-              </tr>`
+      var tutorData = `<tr>
+          <th>Nome:</th>
+          <td>${tutor[i].name}</td>
+        </tr>
+        <tr>
+          <th>Cognome:</th>
+          <td>${tutor[i].surname}</td>
+        </tr>
+        <tr>
+          <th>Email:</th>
+          <td>${tutor[i].email}</td>
+        </tr>
+        <tr>
+          <th>Università:</th>
+          <td>${tutor[i].università}</td>
+        </tr>
+        <tr>
+          <th>Corso:</th>
+          <td>${tutor[i].corso}</td>
+        </tr>
+        <tr>
+          <th>Esami:</th>
+          <td></td>
+        </tr>`
     }
-    bodyData.innerHTML += fullData
+    fullData.innerHTML += tutorData
 
   </script>
 </html>
