--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -141,18 +141,17 @@
       $("#myTable").empty();
 
       for (var i = 0; i < data.length; i++){
-        sessionStorage.setItem("tutor", data;)
         var row = `<tr>
                 <td>${data[i].name}</td>
                 <td>${data[i].surname}</td>
                 <td>${data[i].email}</td>
-                <td><button onclick="buildFullTable(data[i])" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
+                <td><button onclick="buildFullTable(data)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
         table.innerHTML += row
       }
     }
     
-    function buildFullTable(){
+    function buildFullTable(data){
       var table1 = document.getElementById('fullData');
       $("#fullData").empty();
 
@@ -160,26 +159,26 @@
       
         var row = `<tr>
           <th>Nome:</th>
-          <td>${sessionStorage.tutor[i].name}</td>
+          <td>${data[i].name}</td>
         </tr>
         <tr>
           <th>Cognome:</th>
-          <td>${sessionStorage.tutor[i].surname}</td>
+          <td>${data[i].surname}</td>
         </tr>
         <tr>
           <th>Email:</th>
-          <td>${sessionStorage.tutor[i].email}</td>
+          <td>${data[i].email}</td>
         </tr>
         <tr>
           <th>Università:</th>
-          <td>${tutor[i].università}</td>
+          <td>${data[i].università}</td>
         </tr>
         <tr>
           <th>Corso:</th>
-          <td>${sessionStorage.tutor[i].corso}</td>
+          <td>${data[i].corso}</td>
         </tr>`
         
-        fullData.innerHTML += row
+        table1.innerHTML += row
       }
     }
 
