--- a/views/dataTable.html
+++ b/views/dataTable.html
@@ -31,41 +31,14 @@
               <th>Nome</th>
               <th>Cognome</th>
               <th>Email</th>
-              <th>Visualizza</th>
+              <th>Università</th>
+              <th>Corso</th>
+              <th>Esami</th>
           </tr>
 
           <tbody id="myTable">
 
           </tbody>
-      </table>
-    </form>
-    
-    <form>
-      <table id = "fullData">
-        <tr>
-          <th>Nome:</th>
-          <td></td>
-        </tr>
-        <tr>
-          <th>Cognome:</th>
-          <td></td>
-        </tr>
-        <tr>
-          <th>Email:</th>
-          <td></td>
-        </tr>
-        <tr>
-          <th>Università:</th>
-          <td></td>
-        </tr>
-        <tr>
-          <th>Corso:</th>
-          <td></td>
-        </tr>
-        <tr>
-          <th>Esami:</th>
-          <td></td>
-        </tr>
       </table>
     </form>
     
@@ -145,40 +118,11 @@
                 <td>${data[i].name}</td>
                 <td>${data[i].surname}</td>
                 <td>${data[i].email}</td>
+                <td>${data[i].universita}</td>
+                <td>${data[i].corso}</td>
                 <td><button onclick="buildFullTable(data)" <i class="material-symbols-outlined"> keyboard_double_arrow_right</td>
               </tr>`
-        table.innerHTML += row
-      }
-    }
-    
-    function buildFullTable(data){
-      var table1 = document.getElementById('fullData');
-      $("#fullData").empty();
-
-      for (var i = 0; i < data.length; i++){
-      
-        var row = `<tr>
-          <th>Nome:</th>
-          <td>${data[i].name}</td>
-        </tr>
-        <tr>
-          <th>Cognome:</th>
-          <td>${data[i].surname}</td>
-        </tr>
-        <tr>
-          <th>Email:</th>
-          <td>${data[i].email}</td>
-        </tr>
-        <tr>
-          <th>Università:</th>
-          <td>${data[i].università}</td>
-        </tr>
-        <tr>
-          <th>Corso:</th>
-          <td>${data[i].corso}</td>
-        </tr>`
-        
-        table1.innerHTML += row
+        table.innerHTML += row;
       }
     }
 
